Fixed spacing of request access btn when wrapped

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -935,6 +935,10 @@ body {
     }
   }
 
+  .btn.btn-spacing-below, .btn-group.btn-group-spacing-below{
+    margin-bottom: 0.5em;
+  }
+
   .rootLoadingMsg {
     width: 100%;
     height: 100%;
